Лекция18: практика, домашка